--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "@nestjs/cli": "^10.4.5"
   }
 }
